apps/wg-easy/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: wg-easy-proxy
  namespace: apps
subsets:
  - addresses:
      - ip: 10.0.0.4
    ports:
      - port: 51821
