apps/wg-easy/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-http
  namespace: apps
spec:
  selector:
    app.kubernetes.io/name: wg-easy
  ports:
    - name: http
      port: 51821
      protocol: TCP
      targetPort: http
  type: ClusterIP
