apps/wg-easy/service-wg.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-wg
  namespace: apps
spec:
  selector:
    app.kubernetes.io/name: wg-easy
  ports:
    - name: wg
      port: 51820
      nodePort: 30000
      protocol: UDP
      targetPort: wg
  type: NodePort
