apps/wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-proxy
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 80
  clusterIP: None
