apps/wg-easy/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy-internal
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: vpn.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wg-easy-proxy
            port:
              number: 80
  tls:
  - hosts:
    - vpn.home
    secretName: wg-easy-internal-tls
